# game-programming

game-dev-cap-1/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
game-dev-cap-2/: Actor.cpp  Actor.h  CMakeLists.txt  main.cpp
learn-SDL/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
